refactor: rename variables, divide components, change styles

--- a/src/app/gallery/components/card/card.component.html
+++ b/src/app/gallery/components/card/card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="gallery-card">
+<mat-card class="gallery-card" [id]="id" appCardSize>
   <mat-card-header>
     <mat-card-title>{{ title }}</mat-card-title>
   </mat-card-header>
