--- a/src/app/gallery/components/list/list.component.scss
+++ b/src/app/gallery/components/list/list.component.scss
@@ -1,10 +1,18 @@
 .gallery-list {
   width: calc(100% - 6rem);
+  height: calc(85vh - 1rem);
   margin: 0 auto;
   padding-top: 15vh;
   padding-bottom: 1rem;
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: flex-start;
   row-gap: 1rem;
   column-gap: 1.3rem;
+
+  &::after {
+    content: "";
+    flex-grow: 999;
+  }
 }
