--- a/src/app/gallery/pages/main-page/main-page.component.html
+++ b/src/app/gallery/pages/main-page/main-page.component.html
@@ -1,13 +1,5 @@
 <mat-toolbar class="header">
-  <h2>Images</h2>
-  <div class="slider-container">
-    <div class="label-container">
-      <label>Few</label>
-      <label>Many</label>
-    </div>
-    <mat-slider min="5" max="25" step="1" value="5">
-      <input matSliderThumb />
-    </mat-slider>
-  </div>
+  <h2>Images {{ itemsMinIndex + 1 }} - {{ itemsMaxIndex }}</h2>
+  <app-slider></app-slider>
 </mat-toolbar>
 <app-list [items]="items"></app-list>
