--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -31,6 +31,7 @@ body {
 
 .header {
   position: fixed;
+  top: 0;
   justify-content: space-between;
   min-height: 15vh;
   background-color: $light-grey-2;
