--- a/src/app/gallery/components/list/list.component.html
+++ b/src/app/gallery/components/list/list.component.html
@@ -1,4 +1,4 @@
 <div class="gallery-list">
-  <app-card *ngFor="let item of items; trackBy: trackByFn" [item]="item">
-  </app-card>
+  <app-item *ngFor="let item of items; trackBy: trackByFn" [item]="item">
+  </app-item>
 </div>
