--- a/src/app/gallery/components/item/item.component.html
+++ b/src/app/gallery/components/item/item.component.html
@@ -1,9 +1,9 @@
-<mat-card class="gallery-card" [id]="id" appCardSize>
+<mat-card class="gallery-card" [id]="id" appCardSize (click)="onClick()">
   <mat-card-header>
     <mat-card-title>{{ title }}</mat-card-title>
   </mat-card-header>
   <img mat-card-image [src]="imageSrc" [alt]="title" />
   <mat-card-actions>
-    <button mat-button>Download</button>
+    <button mat-button (click)="onDownloadButtonClick($event)">Download</button>
   </mat-card-actions>
 </mat-card>
