--- a/src/app/gallery/components/item/item.component.html
+++ b/src/app/gallery/components/item/item.component.html
@@ -4,6 +4,8 @@
   </mat-card-header>
   <img mat-card-image [src]="imageSrc" [alt]="title" />
   <mat-card-actions>
-    <button mat-button (click)="onDownloadButtonClick($event)">Download</button>
+    <button mat-button (click)="onDownloadClick($event, filename)">
+      Download
+    </button>
   </mat-card-actions>
 </mat-card>
