--- a/src/app/gallery/pages/detailed-info-page/detailed-info-page.component.html
+++ b/src/app/gallery/pages/detailed-info-page/detailed-info-page.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar class="header">
   <h2>{{ title }}</h2>
   <div class="buttons-container">
-    <button mat-button>Download</button>
-    <button mat-button (click)="back()">Back</button>
+    <button mat-button (click)="onDownloadClick(filename)">Download</button>
+    <button mat-button (click)="onBackClick()">Back</button>
   </div>
 </mat-toolbar>
 <div class="image-container">
