--- a/src/app/gallery/components/item/item.component.scss
+++ b/src/app/gallery/components/item/item.component.scss
@@ -5,7 +5,7 @@
   cursor: pointer;
 
   &:hover {
-    transform: scale(1.02);
+    transform: scale(1.01);
     z-index: 999;
   }
 }
@@ -17,6 +17,12 @@
     object-fit: cover;
     height: calc(100% - 7rem);
     width: auto;
+    opacity: 0;
+    transition: all 0.2s ease;
+
+    &.visible {
+      opacity: 1;
+    }
   }
 
   mat-card-header {
