--- a/src/app/gallery/pages/detailed-info-page/detailed-info-page.component.html
+++ b/src/app/gallery/pages/detailed-info-page/detailed-info-page.component.html
@@ -6,5 +6,5 @@
   </div>
 </mat-toolbar>
 <div class="image-container">
-  <img [src]="imageSrc" [alt]="title" />
+  <img [src]="imageSrc" [alt]="title" appImageLoading />
 </div>
