--- a/src/app/gallery/pages/detailed-info-page/detailed-info-page.component.scss
+++ b/src/app/gallery/pages/detailed-info-page/detailed-info-page.component.scss
@@ -15,5 +15,11 @@
   img {
     max-width: 100%;
     max-height: 80vh;
+    opacity: 0;
+    transition: all 0.2s ease;
+
+    &.visible {
+      opacity: 1;
+    }
   }
 }
