--- a/src/app/core/components/spinner/spinner.component.scss
+++ b/src/app/core/components/spinner/spinner.component.scss
@@ -1,11 +1,14 @@
+@import '../../../../styles/variables.scss';
+
 .cssload-container {
   position: fixed;
   width: 100%;
+  height: 85vh;
   left: 0;
   right: 0;
-  top: 0;
+  top: 15vh;
   bottom: 0;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: $light-grey-2;
   z-index: 9999;
 }
 
