--- a/src/app/gallery/components/item/item.component.html
+++ b/src/app/gallery/components/item/item.component.html
@@ -2,7 +2,12 @@
   <mat-card-header>
     <mat-card-title>{{ title }}</mat-card-title>
   </mat-card-header>
-  <img mat-card-image [src]="imageSrc" [alt]="title" appImageLoading />
+  <img
+    mat-card-image
+    [src]="imageSrc"
+    [alt]="title"
+    loading="lazy"
+    appImageLoading />
   <mat-card-actions>
     <button mat-button (click)="onDownloadClick($event, filename)">
       Download
