--- a/src/app/gallery/components/list/list.component.scss
+++ b/src/app/gallery/components/list/list.component.scss
@@ -1,9 +1,8 @@
 .gallery-list {
   width: calc(100% - 6rem);
   height: calc(85vh - 1rem);
+  // padding-top: 15vh;
   margin: 0 auto;
-  padding-top: 15vh;
-  padding-bottom: 1rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
