refactor: remove spaces, add types, add line breaks

--- a/src/app/gallery/components/item/item.component.html
+++ b/src/app/gallery/components/item/item.component.html
@@ -1,4 +1,4 @@
-<mat-card class="gallery-card" [id]="id" appCardSize (click)="onClick()">
+<mat-card class="gallery-card" appCardSize (click)="onClick()">
   <mat-card-header>
     <mat-card-title>{{ title }}</mat-card-title>
   </mat-card-header>
