--- a/src/app/gallery/components/detailed-info-dialog/detailed-info-dialog.component.scss
+++ b/src/app/gallery/components/detailed-info-dialog/detailed-info-dialog.component.scss
@@ -1,16 +1,20 @@
+@import '../../../../styles/variables.scss';
+
 .buttons-container{
   display: flex;
   gap: 1rem;
 }
 
 .image-container {
-  width: 100%;
+  position: fixed;
+  width: 100vw;
   height: 80vh;
   padding-top: 15vh;
   padding-bottom: 5vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: $light-grey-2;
 
   img {
     max-width: 100%;
